video z-index fix css

--- a/style.css
+++ b/style.css
@@ -108,6 +108,10 @@ div.footer-wrap a:hover {
   min-height: auto!important;
 }
 
+.w-background-video>video{
+  z-index: 0!important;
+}
+
 
 /* On screens that are > 1024 and < 1100 */
 @media screen and (min-width: 1024px) and (max-width: 1099px) {
